# rust-grep

./: .gitignore  Cargo.toml  README.md
grrs/src/: main.rs
src/: lib.rs  main.rs  main.test.rs
tests/: cli.rs
