[package]
name = "grep"
version = "0.1.0"
edition = "2018"
description = "A CLI utility to grep for keywords in a file"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.14"
structopt = "0.3.13"

[dev-dependencies]
assert_cmd = "0.10"
predicates = "1"
tempfile = "3"
